# wangup-docs

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  statusline_debug.json
.github/workflows/: deploy-docs.yml
basic-usage/data-storage/: index.html
basic-usage/linux-basics/: index.html
basic-usage/ssh-setup/: index.html
basic-usage/vscode/: index.html
computing/gpu-servers/: index.html
computing/threadripper/: index.html
containers/building/: index.html
containers/harbor/: index.html
containers/intro/: index.html
containers/podman/: index.html
docs/: index.md
docs/basic-usage/: data-storage.md  linux-basics.md  ssh-setup.md  vscode.md
docs/computing/: gpu-servers.md  threadripper.md
docs/containers/: building.md
docs/getting-started/: account-setup.md  hardware-overview.md  index.md  welcome.md  why-linux.md
docs/hpc/: modules.md  overview.md  slurm.md
docs/infrastructures/: computing-specs.md  storage.md
docs/maintainer/: account.md  core-server.md  server-administration.md  storage.md  team.md
docs/reference/: faq.md  glossary.md  quick-ref.md  resources.md
docs/snippets/: compose-dev.md
docs/user-guide/: faq.md  quick-reference.md  rules-of-conduct.md  tools.md
getting-started/: index.html
getting-started/account-setup/: index.html
getting-started/hardware-overview/: index.html
getting-started/welcome/: index.html
getting-started/why-linux/: index.html
hpc/modules/: index.html
mermaids/: build.sh  infra_topo.mmd
search/: search_index.json
stylesheets/: extra.css
(+115 files in other folders)
